# src/routes/emailRoutes.js
@@ -1,8 +1,8 @@
-import { SendOtps, verifyOtps, expireOtps } from "../controllers/emailController.js";
+import { reSendOtps, verifyOtps, expireOtps } from "../controllers/emailController.js";
 import { Router } from 'express';
 
 let emailRouter = Router();
-emailRouter.post('/otps/create', SendOtps);
+emailRouter.post('/otps/resend', reSendOtps);
 emailRouter.post('/otps/verify', verifyOtps)
 emailRouter.get('/otps/expire', expireOtps)
 
